# Minecraft_gui

./: DOCUMENTATION.md  README.md  docker-compose.yml
gui_backend/: .gitignore  Cargo.toml  docker-compose.yml
gui_backend/src/: docker_compose.rs  main.rs
gui_backend/src/client/: docker_compose.rs  mod.rs  rcon.rs
gui_backend/src/rcon_client/: mod.rs
gui_backend/src/server/: mod.rs  router.rs
gui_backend/src/server/router/: mod.rs  query.rs  rcon.rs  server.rs  stats.rs
gui_front/: package-lock.json  package.json  vite.config.js
gui_front/src/: App.jsx  app.scss  main.jsx
gui_front/src/components/: HomePage.jsx  ServerProperties.jsx  homePage.scss  mcProvider.jsx  serverProperties.scss
gui_front/src/components/menu/: index.jsx  menu.scss
gui_front/src/components/side_menu/: ContentSwitcher.jsx  index.jsx  menu.scss
