[package]
name = "gui_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.23"
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
rand = "0.8"
lazy_static = "1.4.0"
mc-query = "1.0.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.13"
reqwest = { version = "0.11.14", features = ["json", "stream", "rustls-tls", "blocking", "gzip"] }
hyper = { version = "0.14", features = ["full"] }
hyperlocal = "0.8"
async-stream = "0.3"
bytes = "1.0"
futures-util = "0.3"